tests/ui/rfc-2632-const-trait-impl/const-and-non-const-impl.stderr
error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/const-and-non-const-impl.rs:7:12
   |
LL | impl const std::ops::Add for i32 {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/const-and-non-const-impl.rs:23:12
   |
LL | impl const std::ops::Add for Int {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 2 previous errors

